[package]
name = "parser"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
hex = "0.4.3"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
parity-scale-codec = {version = "3.6.9", features = ["derive", "bit-vec"]}
regex = "1.10.2"
scale-info = "2.10.0"
sp-arithmetic = {git = "https://github.com/paritytech/substrate"}
sp-core = { version = "6.0.0", features = ["full_crypto"]}
sp-runtime = "6.0.0"
thiserror = "1.0.50"

[dev-dependencies]
pretty_assertions = "1"
subxt = { version = "0.27", default-features = false }

[lib]
name = "parser"
crate-type = ["lib"]
